--- a/src/app.scss
+++ b/src/app.scss
@@ -38,3 +38,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+.contactInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
